--- a/i18n/locale-pl.json
+++ b/i18n/locale-pl.json
@@ -1,3 +1,14 @@
 {
-    "LANGUAGE": "polski"
+    "LANGUAGE": "polski",
+    "WALLET": {
+        "TITLE": "Twój portfel",
+        "TABLE_HEADER": {
+            "ADDRESS": "Adres",
+            "RECEIVED": "Otrzymane",
+            "BALANCE": "Stan konta"
+        },
+        "TABLE_ENTRIES": {
+            "DELETE": "usuń"
+        }
+    }
 }
