#19 added missing translation

--- a/i18n/locale-en.json
+++ b/i18n/locale-en.json
@@ -9,6 +9,9 @@
         },
         "TABLE_ENTRIES": {
             "DELETE": "delete"
+        },
+        "ADD": {
+            "PLACEHOLDER": "address / privkey"
         }
     }
 }
