#12 undo actions is working now

--- a/i18n/locale-pl.json
+++ b/i18n/locale-pl.json
@@ -12,5 +12,8 @@
         "ADD": {
             "PLACEHOLDER": "adres / klucz prywatny"
         }
+    },
+    "UNDO_MESSAGES": {
+        "DEFAULT": "Cofnij wykonaną czynność."
     }
 }
