--- a/i18n/locale-en.json
+++ b/i18n/locale-en.json
@@ -12,5 +12,8 @@
         "ADD": {
             "PLACEHOLDER": "address / privkey"
         }
+    },
+    "UNDO_MESSAGES": {
+        "DEFAULT": "Undo your action."
     }
 }
