#12 added translation for deleted wallet entry

--- a/i18n/locale-en.json
+++ b/i18n/locale-en.json
@@ -14,6 +14,7 @@
         }
     },
     "UNDO_MESSAGES": {
-        "DEFAULT": "Undo your action."
+        "DEFAULT": "Undo your action",
+        "DELETE_WALLET_ENTRY": "Restore a deleted entry from the wallet"
     }
 }
