#12 added close button title

--- a/i18n/locale-en.json
+++ b/i18n/locale-en.json
@@ -13,8 +13,11 @@
             "PLACEHOLDER": "address / privkey"
         }
     },
-    "UNDO_MESSAGES": {
-        "DEFAULT": "Undo your action",
-        "DELETE_WALLET_ENTRY": "Restore a deleted entry from the wallet"
+    "UNDO_DIALOG": {
+        "CLOSE": "close",
+        "MESSAGES": {
+            "DEFAULT": "Undo your action",
+            "DELETE_WALLET_ENTRY": "Restore a deleted entry from the wallet"
+        }
     }
 }
