#39 added info message for 2sec

--- a/i18n/locale-pl.json
+++ b/i18n/locale-pl.json
@@ -10,7 +10,8 @@
             "DELETE": "usuń"
         },
         "ADD": {
-            "PLACEHOLDER": "adres / klucz prywatny"
+            "PLACEHOLDER": "adres / klucz prywatny",
+            "WRONGADDRESS": "Nieprawidłowy adres/klucz"
         }
     },
     "UNDO_DIALOG": {
