#63 added grunt i18n task

--- a/i18n/locale-ru.json
+++ b/i18n/locale-ru.json
@@ -19,7 +19,7 @@
             "ADD_BUTTON": "…",
             "INPUT_PLACEHOLDER": "--- ---- ----",
             "CANCEL_BUTTON": "------",
-            "CONFIRM_BUTTON": "--- -------",
+            "CONFIRM_BUTTON": "--- ---------",
             "CLOSE_DIALOG": "-----"
         }
     },
