#82 added function that clears wallet

--- a/i18n/locale-ru.json
+++ b/i18n/locale-ru.json
@@ -27,7 +27,8 @@
         "CLOSE": "Закрыть",
         "MESSAGES": {
             "DEFAULT": "Отмена",
-            "DELETE_WALLET_ENTRY": "Восстановить удаленную запись из кошелька"
+            "DELETE_WALLET_ENTRY": "Восстановить удаленную запись из кошелька",
+            "CLEAR_WALLET": "------- ----- ------"
         }
     }
 }
