--- a/i18n/locale-pl.json
+++ b/i18n/locale-pl.json
@@ -20,7 +20,8 @@
             "INPUT_PLACEHOLDER": "umieść dane tutaj",
             "CANCEL_BUTTON": "anuluj",
             "CONFIRM_BUTTON": "dodaj adresy",
-            "CLOSE_DIALOG": "zamknij"
+            "CLOSE_DIALOG": "zamknij",
+            "PROCESSING_INPUT": "Przetwarzanie danych wejściowych…"
         }
     },
     "UNDO_DIALOG": {
